--- a/memory.html
+++ b/memory.html
@@ -427,7 +427,7 @@
     <div class="memory-wrap">
         <!-- การ์ดที่ 1 -->
         <div class="memory-card">
-            <img src="img/ann33-0002.jpeg" alt="memory1">
+            <img src="img/ann33-0006.jpg" alt="memory1">
             <div class="memory-text">
                 <h2>วันนั้นวันเกิดต้าเองงง</h2>
                 <p>นี่ๆรูปนี้ถ่ายตอนอยู่หน้าโรงหนัง55กะจะมาดูหนังด้วยกันสะหน่อยสรุปก้ไม่ได้ดู555เเต่ว่าได้หนังสือกับบ้านเพี๊ยบเลยอ่ะคือมีความสุขมั๊กนี่ตอนนี้หนังสือนั้นยังอยู่ยุเลยอะ
